Added Checkbox in Add Student Page

--- a/Views/Student/AddStudent.cshtml
+++ b/Views/Student/AddStudent.cshtml
@@ -26,6 +26,14 @@
 
 </div>
 
+    <div class="mt-3">
+        <label class="form-check-label" for="Status">Registerd</label>
+        <input type="checkbox" class="form-check-input" asp-for="Status" id="Status" />
+
+    </div>
+
+
+
 <div class="mt-3">
 
     <button type="submit" class="btn btn-primary">SAVE</button>
