--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -40,6 +40,11 @@
         <input type="text" class="form-control" asp-for="Subject" />
 
     </div>
+    <div class="mt-3">
+        <label class="form-check-label" for="Status">Registerd</label>
+        <input type="checkbox" class="form-check-input" asp-for="Status" id="Status" />
+
+    </div>
 
     <div class="mt-3">
 
