--- a/Views/Student/Edit.cshtml
+++ b/Views/Student/Edit.cshtml
@@ -48,6 +48,6 @@
 
     <div class="mt-3">
 
-        <button type="submit" class="btn btn-primary">UPDATE</button>
+        <button type="submit" class="btn btn-primary">Commit</button>
     </div>
 </form>
